# simple-triangle

./: .gitignore  LICENSE  README.md
simple-triangle/: shared-scripts.sh
simple-triangle/console/: CMakeLists.txt  build.sh  cmake-post-build.sh  setup.sh
simple-triangle/main/src/: main.cc
